		* Currently copies the functionality in SusyNtTools. I haven't removed
		  the old approach yet.
	* Made BTagCalib a static pointer in SusyNtTools
		* This is to reduce the number of instantiations of the class
		  and open root files polluting the ROOT space when a user
		  uses many instantiations of SusyNtTools (like I do).
		  If this causes problems for users, I can change it back.

2014-02-19 Steve
	* Split up the functionality for weighting the MC
		* Temporary change until everything is moved into MCWeighter
		* Added getSumw, getXsecTimesEff, getPileupWeight to SusyNtTools.
		  getEventWeight calls each of these
		* Can now request pileup systematic via sys flag
	* Now allow for NULL Met pointer in Meff methods
		* For calculating Meff/HT without met
	* Added pileup sys enums to MCWeighter: Sys_PILEUP_UP, Sys_PILEUP_DN

2014-02-12 Steve
	* Added call to clearObjects at beginning of SusyNtAna selectObjects
	* Removed LAr veto from Susy3LepCutflow

2014-02-11 Steve
	* Bugfix for muon systematics in n0150
		* Added temporary boolean argument to 
		  SusyNtAna.selectObjects: n0150BugFix
		* This flag propagates down through SusyNtTools 
		  getBaselineObjects, getPreMuons, and finally
		  Muon.setState

2014-02-10 Steve
	* Updated SusyNtTools.eventHasSusyPropagators to return
	  true as soon as a problematic sparticle is found
	* Added susySpartId1 and susySpartId2 to Event class
		* Allows us to recalculate the proc ID on the fly later

2014-02-09 Steve
	* Updated Susy3LepCutflow code
		* Updated cleaning cuts
		* More event selection methods
		* Full MC weighting, including the latest
		  prescriptions for sumw and cross section
		* Skeleton methods for histograms

2014-02-06 Steve
	* Added getBTagSFJets2Lep to SusyNtTools which returns
	  the subset of baseline jets which are tested for the b-veto.
	  These are thus the jets to be passed to the bTagSF method.

2014-02-05 Steve
	* Added MCID and proc ID to Event.print()